deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openidentity-auth
  namespace: openidentity
  labels:
    app: openidentity-auth
spec:
  selector:
    app: openidentity-auth
  ports:
    - name: http
      port: 80
      targetPort: 7070
      protocol: TCP
  type: ClusterIP
